<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true" >

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/loginbg"
            android:gravity="center"
android:layout_marginBottom="10dp"
            android:hint="@string/userid"
            android:inputType="textEmailAddress"
            android:textStyle="bold" >
        </EditText>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etUserName"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/loginbg"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textStyle="bold" >
        </EditText>

        <com.mobatia.vkcsalesapp.customview.CustomButton
            android:id="@+id/btLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/button"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/btLogin"
            android:layout_below="@+id/btLogin" >

            <TextView
                android:id="@+id/txtSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:visibility="gone" />
        </RelativeLayout>

        <com.mobatia.vkcsalesapp.customview.CustomButton
            android:id="@+id/btLoginReq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/btLogin"
            android:layout_below="@+id/btLogin"
            android:background="@drawable/button"
            android:gravity="center"
            android:text="@string/signup"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <com.mobatia.vkcsalesapp.customview.CustomTextView
            android:id="@+id/textForgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            android:text="Forgot password ?" 
            android:padding="20dp"
            android:layout_below="@+id/btLoginReq"/>
    </RelativeLayout>

</RelativeLayout>