<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/loginbg"
                android:ems="10"
                android:gravity="center"
                android:hint="Name"
                android:inputType="text"
                android:textSize="14sp"
                android:textStyle="bold" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/etShopName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/etEmail"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/loginbg"
                android:ems="10"
                android:textSize="14sp"
                android:gravity="center"
                android:hint="Shop Name"
                android:inputType="text"
                android:maxLines="5"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/loginbg"
                android:ems="10"
                android:gravity="center"
                android:textSize="14sp"
                android:hint="Address"
                android:inputType="text"
                android:maxLines="5"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/etState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/loginbg"
                android:clickable="true"
                android:gravity="center"
                android:hint="Select State"
                android:inputType="text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/etDistrict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/loginbg"
                android:clickable="true"
                android:gravity="center"
                android:hint="Select District"
                android:inputType="text"
                android:maxLines="5"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageLogo"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/loginbg"
                android:gravity="center"
                android:textSize="14sp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textStyle="bold" >
            </EditText>

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etEmail"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/loginbg"
                android:gravity="center"
                android:hint="@string/phone"
                android:inputType="phone"
                android:textSize="14sp"
                android:textStyle="bold" >
            </EditText>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etPhone"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/loginbg"
                android:gravity="center"
                android:hint="@string/password"
                android:textSize="14sp"
                android:inputType="textPassword"
                android:textStyle="bold" >
            </EditText>

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="14sp"
                android:layout_marginTop="1dp"
                android:background="@drawable/loginbg"
                android:gravity="center"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textStyle="bold" >
            </EditText>

            <com.mobatia.vkcsalesapp.customview.CustomButton
                android:id="@+id/btRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/btLogin"
                android:layout_below="@+id/btLogin" >
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>